--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,6 +5,8 @@
     background-color: var(--blue);
     border-radius: 0 0 10vh 0;
     width: 100%;
+    display: flex;
+    align-items: center;
     img{
         width: 12%;
         padding: 1% 0;
