--- a/src/components/Line.module.scss
+++ b/src/components/Line.module.scss
@@ -2,12 +2,12 @@
     height: 5px;
     width: 30%;
     margin: 2% auto;
-    background: linear-gradient(to left, #F3EADB, #80CBBC 25%,#80CBBC 75%, #F3EADB);
+    background: linear-gradient(to left, #F3EADB, #1AA89E 25%,#1AA89E 75%, #F3EADB);
 }
 
 .lineReverse{
     height: 3px;
     width: 50%;
     margin: 2% auto;
-    background: linear-gradient(to left, #80CBBC, #F3EADB 40%,#F3EADB 60%, #80CBBC); 
+    background: linear-gradient(to left, #1AA89E, #F3EADB 40%,#F3EADB 60%, #1AA89E); 
 }
