--- a/src/components/Footer/Contact.module.scss
+++ b/src/components/Footer/Contact.module.scss
@@ -1,14 +1,15 @@
 .contact{
     .link{
         color:var(--text-color);
-        padding :2%;
+        padding :12px;
         font-size: 1.2rem;
         text-decoration: none;
     }
     p{
-        padding: 2%;
+        padding-right: 12px;
     }
     i{
         color: var(--text-color);
+        font-size: 1.5rem;
     }
 }
