--- a/src/components/Line.module.scss
+++ b/src/components/Line.module.scss
@@ -1,7 +1,7 @@
 .line{
     height: 5px;
     width: 30%;
-    margin: 2% auto;
+    margin: 1.5em auto;
     background: linear-gradient(to left, #F3EADB, #1AA89E 25%,#1AA89E 75%, #F3EADB);
 }
 
