--- a/src/components/Button.module.scss
+++ b/src/components/Button.module.scss
@@ -4,6 +4,6 @@
     background-color: var(--action);
     border-radius: 10vh 0 10vh 0;
     font-weight: 800;
-    padding: 1% 5%;
+    padding: 0.8em 2em;
     font-size:1.2rem;
 }
