--- a/src/components/Header/BurgerMenu/Burger.module.scss
+++ b/src/components/Header/BurgerMenu/Burger.module.scss
@@ -1,13 +1,18 @@
 .icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color:var(--red);
     border-radius:5vh;
     position: fixed;
     right: 14%;
-    top: 12.5%;
+    top: 10%;
     z-index:8;
     backdrop-filter: blur(12px);
     align-items: center;
-    padding: 0.5%;
+    padding-top: 0.2%;
+    height: 4em;
+    width: 4em;
     i{
         font-size: 2.8em;
     }
