--- a/src/components/Header/BurgerMenu/Nav.module.scss
+++ b/src/components/Header/BurgerMenu/Nav.module.scss
@@ -13,7 +13,7 @@
     z-index: 4 ;
     top: 0;
     left: 0;
-    transition: all 0.5s;
+    transition: all .5s;
     .nav{
         width: 80%;
         margin-bottom: 2%;
