:sparkles: :feat routes + anim burger + page ludo test

--- a/src/components/Header/BurgerMenu/Burger.module.scss
+++ b/src/components/Header/BurgerMenu/Burger.module.scss
@@ -1,19 +1,76 @@
-.icon{
+.icon {
     display: flex;
     align-items: center;
     justify-content: center;
-    color:var(--red);
-    border-radius:5vh;
+    color: var(--red);
+    border-radius: 5vh;
     position: fixed;
     right: 14%;
-    top: 10%;
-    z-index:8;
-    backdrop-filter: blur(12px);
+    top: 9.5%;
+    z-index: 8;
+    backdrop-filter: blur(5px);
     align-items: center;
     padding-top: 0.2%;
-    height: 4em;
-    width: 4em;
-    i{
-        font-size: 2.8em;
+    height: 4.8em;
+    width: 4.8em;
+    transition: .5s all;
+
+    &:hover {
+        box-shadow: 10px 5px 5px var(--red);
     }
+
+    i {
+        font-size: 2.8em;
+        cursor: pointer;
+        transition: .5s ease-in-out;
+
+        &:hover {
+            transform: scale(1.1);
+
+        }
+    }
+}
+
+.burgerMenu {
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    transition: ease-out 0.3s;
+    height: 100%;
+    width: 32%;
+    border-radius: 10vh 0 0 10vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    background-color: var(--blue);
+    opacity: 0.95;
+    z-index: 4;
+    top: 0;
+    right: 0;
+    // transition: ease 1s;
+
+    .nav {
+        width: 80%;
+        margin-block: 2%;
+
+        .ul {
+            font-size: 0;
+
+            .li {
+                text-align: center;
+                margin-block: 4%;
+
+                a {
+                    text-align: center;
+                    font-size: 2.5rem;
+                    padding: 5% 0;
+                    letter-spacing: 5px;
+                    text-decoration: none;
+                    color: var(--text-color);
+                }
+            }
+        }
+    }
+
 }
