--- a/src/components/Header/Account.module.scss
+++ b/src/components/Header/Account.module.scss
@@ -1,8 +1,32 @@
-.icon{
-    color:var(--red);
+.icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--red);
+    border-radius: 5vh;
     position: relative;
     left: 66%;
-    i{
+
+    z-index: 3;
+    backdrop-filter: blur(5px);
+    align-items: center;
+    padding-top: 0.2%;
+    height: 4.8em;
+    width: 4.8em;
+    transition: .5s all;
+
+    &:hover {
+        // border: solid 8px var(--red);
+        box-shadow: 10px 5px 5px var(--red);
+    }
+
+    i {
         font-size: 2.8em;
+        transition: .5s ease-in-out;
+        cursor: pointer;
+
+        &:hover {
+            transform: scale(1.1);
+        }
     }
 }
