--- a/src/components/DernieresSeances.module.scss
+++ b/src/components/DernieresSeances.module.scss
@@ -1,7 +1,15 @@
-.seances{
+@use"../assets/styles/mixin" as mixin;
+
+.seances {
     width: 50%;
     margin-top: 5%;
-    h2{
+
+    @include mixin.md-lt {
+        width: 90%;
+        margin: 1% auto;
+    }
+
+    h2 {
         text-align: center;
     }
 }
