--- a/src/components/Header/BurgerMenu/Burger.module.scss
+++ b/src/components/Header/BurgerMenu/Burger.module.scss
@@ -1,28 +1,64 @@
+@use"../../../assets/styles/mixin" as mixin;
+
+
 .icon {
     display: flex;
     align-items: center;
     justify-content: center;
     color: var(--red);
     border-radius: 5vh;
-    position: fixed;
-    right: 14%;
-    top: 9.5%;
-    z-index: 8;
     backdrop-filter: blur(5px);
     align-items: center;
     padding-top: 0.2%;
     height: 4.8em;
+    z-index: 8;
+    position: relative;
     width: 4.8em;
-    transition: .5s all;
+    transition: .5s ease-in-out;
+    margin-left: 15%;
+
+    @include mixin.xs {
+        margin-left: 10%;
+        height: 3.5em;
+        width: 3.5em;
+    }
+
+    @include mixin.intxs {
+        margin-left: 10%;
+        height: 3em;
+        width: 3em;
+    }
 
     &:hover {
         box-shadow: 10px 5px 5px var(--red);
     }
 
     i {
-        font-size: 2.8em;
+        font-size: 3rem;
         cursor: pointer;
         transition: .5s ease-in-out;
+
+        @include mixin.lg-lt {
+            font-size: 2.2em;
+        }
+
+        @include mixin.xs {
+            font-size: 1.8em;
+        }
+
+        @include mixin.xxxs {
+            font-size: 1.5em;
+        }
+
+        @include mixin.xxxxs {
+            font-size: 1.5em;
+        }
+
+        @include mixin.smallest {
+            font-size: 1.5em;
+
+        }
+
 
         &:hover {
             transform: scale(1.1);
@@ -35,7 +71,7 @@
     margin: 0;
     padding: 0;
     position: fixed;
-    transition: ease-out 0.3s;
+    transition: ease-out 0.5s;
     height: 100%;
     width: 32%;
     border-radius: 10vh 0 0 10vh;
@@ -45,10 +81,23 @@
     justify-content: center;
     background-color: var(--blue);
     opacity: 0.95;
-    z-index: 4;
+    z-index: 5;
     top: 0;
     right: 0;
-    // transition: ease 1s;
+
+    @include mixin.lg-lt {
+        width: 40%;
+    }
+
+    @include mixin.md-lt {
+        width: 50%;
+    }
+
+    @include mixin.sm-lt {
+        width: 100%;
+        border-radius: 0
+    }
+
 
     .nav {
         width: 80%;
@@ -61,6 +110,7 @@
                 text-align: center;
                 margin-block: 4%;
 
+
                 a {
                     text-align: center;
                     font-size: 2.5rem;
@@ -68,6 +118,23 @@
                     letter-spacing: 5px;
                     text-decoration: none;
                     color: var(--text-color);
+
+                    @include mixin.intxl {
+                        font-size: 2rem;
+                    }
+
+                    @include mixin.md-lt {
+                        font-size: 1.7rem;
+                    }
+
+                    @include mixin.intxxs {
+                        font-size: 1.5rem;
+                    }
+
+                    @include mixin.smallest {
+                        font-size: 1.5rem;
+                        letter-spacing: 3px;
+                    }
                 }
             }
         }
