--- a/src/components/SecondTitle.module.scss
+++ b/src/components/SecondTitle.module.scss
@@ -1,5 +1,37 @@
-.title{
+@use"../assets/styles/mixin" as mixin;
+
+.title {
     font-weight: 700;
     font-size: 2rem;
     text-align: center;
+
+    @include mixin.sm-lt {
+        font-size: 1.8rem;
+
+    }
+
+    @include mixin.xs {
+        font-size: 1.6rem;
+
+    }
+
+    @include mixin.intxs {
+        font-size: 1.3rem;
+
+    }
+
+    @include mixin.xxxs {
+        font-size: 1.2rem;
+
+    }
+
+    @include mixin.intxs {
+        font-size: 1rem;
+
+    }
+
+    @include mixin.smallest {
+        font-size: 0.9rem;
+
+    }
 }
