--- a/src/pages/Accueil/Home.module.scss
+++ b/src/pages/Accueil/Home.module.scss
@@ -1,10 +1,32 @@
-.flex{
-    width:100%;
-    display:flex;
-    .container{
+@use"../../assets/styles/mixin" as mixin;
+
+.flex {
+    width: 100%;
+    display: flex;
+
+    @include mixin.md-lt {
+        flex-wrap: wrap;
+    }
+
+    .container {
         width: 50%;
         margin: 0 auto;
         flex-direction: column;
         display: flex;
+
+        @include mixin.md-lt {
+            width: 80%;
+        }
+
+        @include mixin.intxs {
+            width: 90%;
+
+        }
+
+        @include mixin.intxxs {
+            width: 95%;
+
+        }
+
     }
 }
