--- a/src/components/MustHave.module.scss
+++ b/src/components/MustHave.module.scss
@@ -141,6 +141,7 @@
             @include mixin.xxs {
                 font-size: 0.9rem;
 
+
             }
 
             @include mixin.xxxs {
@@ -150,6 +151,7 @@
 
             @include mixin.intxxs {
                 font-size: 0.9rem;
+                margin-bottom: 1%;
 
             }
         }
