--- a/src/components/Header/BurgerMenu/Burger.module.scss
+++ b/src/components/Header/BurgerMenu/Burger.module.scss
@@ -14,7 +14,7 @@
     z-index: 8;
     position: relative;
     width: 4.8em;
-    transition: .5s ease-in-out;
+    transition: box-shadow 0.5s ease-in-out;
     margin-left: 15%;
 
     @include mixin.xs {
