:bug: :fix animation burger

--- a/src/components/Header/BurgerMenu/Burger.module.scss
+++ b/src/components/Header/BurgerMenu/Burger.module.scss
@@ -67,6 +67,11 @@
     }
 }
 
+.noShow {
+    translate: 100%;
+    transition: all ease-out 0.3s;
+}
+
 .burgerMenu {
     margin: 0;
     padding: 0;
