--- a/src/components/Header/BurgerMenu/Burger.module.scss
+++ b/src/components/Header/BurgerMenu/Burger.module.scss
@@ -46,6 +46,14 @@
             font-size: 1.8em;
         }
 
+        @include mixin.xxs {
+            font-size: 1.5em;
+        }
+
+        @include mixin.xxxs {
+            font-size: 1.3em;
+        }
+
         @include mixin.xxxs {
             font-size: 1.5em;
         }
