--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -29,51 +29,51 @@
         display: flex;
         align-items: center;
         position: fixed;
-        top: 10%;
+        top: clamp (5%, 8%, 10%);
         right: 15%;
         z-index: 8;
 
-        @include mixin.xxxl {
-            top: 8%;
-        }
+        // @include mixin.xxxl {
+        //     top: 8%;
+        // }
 
-        @include mixin.intxl {
-            top: 7%;
-        }
+        // @include mixin.intxl {
+        //     top: 7%;
+        // }
 
-        @include mixin.xl {
-            top: 6%;
-        }
+        // @include mixin.xl {
+        //     top: 6%;
+        // }
 
-        @include mixin.lg-lt {
-            top: 5%;
-        }
+        // @include mixin.lg-lt {
+        //     top: 5%;
+        // }
 
-        @include mixin.md-lt {
-            top: 6%;
-        }
+        // @include mixin.md-lt {
+        //     top: 6%;
+        // }
 
-        @include mixin.sm-lt {
-            top: 3%;
+        // @include mixin.sm-lt {
+        //     top: 3%;
 
-        }
+        // }
 
         @include mixin.xs {
             width: 25%;
-            top: 5%;
+            //     top: 5%;
         }
 
         @include mixin.intxs {
-            width: 50%;
-            top: 5.5%;
-            right: -15%;
+            width: 15%;
+            //     top: 5.5%;
+            //     right: -15%;
         }
 
-        @include mixin.intxxs {
-            top: 5%;
-            width: 55%;
+        // @include mixin.intxxs {
+        //     top: 5%;
+        //     width: 55%;
 
-        }
+        // }
 
 
 
