:bug: :fix responsive button burger

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -64,7 +64,8 @@
         }
 
         @include mixin.intxs {
-            width: 15%;
+            width: 25%;
+            right: 10%;
             //     top: 5.5%;
             //     right: -15%;
         }
