--- a/src/components/Line.module.scss
+++ b/src/components/Line.module.scss
@@ -8,6 +8,6 @@
 .lineReverse {
     height: 3px;
     width: 50%;
-    margin: 2% auto;
+    margin: 1em auto 0 auto;
     background: linear-gradient(to left, #1AA89E, #F3EADB 40%, #F3EADB 60%, #1AA89E);
 }
