--- a/src/components/Button.module.scss
+++ b/src/components/Button.module.scss
@@ -8,6 +8,45 @@
     font-weight: 800;
     padding: 0.8em 2em;
     font-size: 1.2rem;
+    overflow: hidden;
+    position: relative;
+    transition: all .3s;
+    z-index: 0;
+    cursor: pointer;
+
+    // &:after {
+    //     content: '';
+    //     position: absolute;
+    //     bottom: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     background-color: var(--action);
+    //     border-radius: 10vh 0 10vh 0;
+    //     z-index: -2;
+    // }
+
+    &:before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 0%;
+        height: 100%;
+        background-color: var(--red);
+        transition: ease-in-out .3s;
+        border-radius: 10vh 0 10vh 0;
+        z-index: -1;
+    }
+
+    &:hover {
+        color: var(--primary);
+        transform: scale(1.1);
+
+        &:before {
+            width: 100%;
+        }
+    }
 
     @include mixin.xl {
         width: 100%;
