--- a/src/pages/Accueil/Home.module.scss
+++ b/src/pages/Accueil/Home.module.scss
@@ -3,6 +3,7 @@
 .flex {
     width: 100%;
     display: flex;
+    align-items: center;
 
     @include mixin.md-lt {
         flex-wrap: wrap;
@@ -13,6 +14,7 @@
         margin: 0 auto;
         flex-direction: column;
         display: flex;
+
 
         @include mixin.md-lt {
             width: 80%;
