--- a/src/components/Carrousel/SampleNextArrow.module.scss
+++ b/src/components/Carrousel/SampleNextArrow.module.scss
@@ -1,4 +1,4 @@
-.arrow{
+.arrow {
     transform: rotate(180deg);
     width: 17%;
     position: absolute;
@@ -6,10 +6,12 @@
     top: 50%;
     right: 0%;
     transform: translateY(-50%);
-    opacity:0.7;
-    transition:0.5s all;
-    filter : invert(1);
-    &:hover{
+    opacity: 0.7;
+    transition: 0.5s all;
+    filter: invert(1);
+    cursor: pointer;
+
+    &:hover {
         opacity: 1;
         transform: scale(1.1) translateY(-50%);
     }
